﻿
0.8.0-DEV2 (14th of September 2022)
----------------------------------------------------------
Note: DEV test versions have separate log, showing changes from one test to other. Release will contain all the changes

Code
----------------------------------------------------------
- Program now generates preview sites for every montag unit and commander

Content
-----------------------------------------------------------
- Wolf, ghost, ghoul, imp summoning sites made 6 times more powerful (summon 6 monsters instead of 1)
- Added elemental summoning sites which summons 3 small elementals at a time, and one that summons 4 different small elementals
- Naga basic units got RPcost cheaper to 10000 from 20000, as they are main population and shouldnt be treated like rare sacreds of patala. (Same reason as for illhybrids)
- Atlantian standard bearers now separated class from regular infantry and has limit of one unit, so frog flags are down. Atlantian standards is also a weapon now, so no more handfight.
- Added hands and claws as a primitive-themed weapons for atlantians as honor for the loss of a useless flag parade.

=============================
0.8.0-DEV1 (20th August 2022)
----------------------------------------------------------
Note: from this version its NatGen-N, however it includes some unreleased features. Should put N somewhere in the version number lol.

Code
----------------------------------------------------------
- Fixed some errors in srctest caused by wrong package declaration and missing imports
- Added txt file to help people in figuring out how to open and run the project. And ToDo list to help indev (working without issues pages)
- Through eternal suffering project is now runnable and buildable
- Changed version of NatGen to 0.8.0DEV and renewed some labels
- Program now writes an amount of time spent for generation after it is completed (was made for 0.7.13)
- Dominions database updated up to v5.57