@@ -19,3 +19,5 @@ future)Extract color used for troops and put it somewhere in DM sebug section at
 1)add PREVIEW sites for montag units (foulspawns) --Done
 2)sacred power slider now will do something --Done (thnks geepope)
 3)generate uwrec units for uwbuild nations.
+
+//Check soulless shambler, so in future not only void and mutated themes, but also damned. or smth u know
